問い合わせの記載を追加した。

--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
             <li><a href="#article3" class="scroll">実行委員より</a></li>
             <li><a href="#article4" class="scroll">市民共創知研究会とは</a></li>
             <li><a href="#article5" class="scroll">みらいらぼの紹介</a></li>
+            <li><a href="#article6" class="scroll">問い合わせ</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -238,6 +239,18 @@
               </div>
             </div>
           </section>
+
+          <section id="article6">
+            <h3>問い合わせ</h3>
+            <p>研究会の内容やスケジュール、参加に際して気になる点がありましたら、下記アドレスまでお問い合わせください。</p>
+            <h5 class="Emphasis">ikeko20471120[at]gmail.com</h5>
+            <p class="warning">送信時には[at]を＠に変換してください。</p>
+            <p>また、細かな情報は研究会のFacebookページに掲載しております。ご参照のうえ、コメントを投稿いただくことで問い合わせをすることもできます。</p>
+            <div class="btn-group" role="group" aria-label="...">
+              <button type="button" class="btn btn-success" onclick="window.open('https://www.facebook.com/events/323323891417936/')">研究会Facebookページ</button>
+            </div>
+          </section>
+
         </article>
   </div>
   <!-- 主文終了 -->
