--- a/fieldWork.html
+++ b/fieldWork.html
@@ -58,6 +58,7 @@
               <li><a href="#article6" class="scroll">フィールドワーク オプション</a></li>
               <li><a href="#article7" class="scroll">フィールドワークで立ち寄るスポット</a></li>
               <li><a href="#article8" class="scroll">フィールドワーク詳細</a></li>
+              <li><a href="#article9" class="scroll">問い合わせ</a></li>
             </ul>
           <!-- サイドメニュー終了 -->
           </nav>
@@ -66,6 +67,7 @@
       <!-- ヘッダー終了 -->
 
     <div class="contents">
+
       <div class="ribbon-wrap">
         <div class="content-wrap">
           <ol class="ribbon-breadcrumb-list">
@@ -75,7 +77,8 @@
           </ol>
           <h1 class="ribbon-banner"><span class="ribbon-banner-text">フィールドワーク</span></h1>
         </div>
-      </div>
+      </div><!-- class="ribbon-wrap" -->
+
       <div class="row fw-box">
         <div class="col-md-8 col-md-offset-2">
         <h4 class="fw-title" id="article0" style="margin-top: 40px;">フィールドワーク行程</h4>
@@ -226,9 +229,23 @@
           </div>
           <!-- 論文募集要項 終了 -->
 
-        </div><!--   <div class="col-md-8 col-md-offset-2"> -->
-      </div>
+          <!-- 問い合わせ -->
+          <div class="row" style="margin-top: 40px;">
+            <div class="col-md-12 col-lg-12">
+              <h4 class="fw-title" id="article9">問い合わせ</h4>
+              <p>研究会の内容やスケジュール、参加に際して気になる点がありましたら、下記アドレスまでお問い合わせください。</p>
+              <p class="Emphasis_p1">ikeko20471120[at]gmail.com</p>
+              <p class="warning">送信時には[at]を＠に変換してください。</p>
+              <p>また、細かな情報は研究会のFacebookページに掲載しております。ご参照のうえ、コメントを投稿いただくことで問い合わせをすることもできます。</p>
+              <div class="btn-group" role="group" aria-label="...">
+                <button type="button" class="btn btn-success" onclick="window.open('https://www.facebook.com/events/323323891417936/')">研究会Facebookページ</button>
+              </div>
+            </div>
+          </div>
+          <!-- 問い合わせ 終了 -->
 
+        </div><!--   <div class="col-md-8 col-md-offset-2"> -->
+      </div><!-- class="row fw-box" -->
     </div>
     <!-- 主文終了 -->
     <!-- フッター開始 -->
