--- a/traffic.html
+++ b/traffic.html
@@ -54,6 +54,7 @@
             <li><a href="#article3" class="scroll" data-offset="50">参加日別オススメ経路</a></li>
             <li><a href="#article4" class="scroll" data-offset="50">韓国からのアクセス</a></li>
             <li><a href="#article5" class="scroll" data-offset="50">対馬での過ごし方</a></li>
+            <li><a href="#article6" class="scroll" data-offset="50">問い合わせ</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -170,6 +171,17 @@
               <li><a href="Files/About/20170415_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
               <li><a href="Files/About/20170415_SIGCCI02_Guide.pdf" download="20170415_SIGCCI02_Guide.pdf">ダウンロード</a></li>
             </ul>
+          </div>
+        </section>
+
+        <section id="article6">
+          <h3>問い合わせ</h3>
+          <p>研究会の内容やスケジュール、参加に際して気になる点がありましたら、下記アドレスまでお問い合わせください。</p>
+          <h5 class="Emphasis">ikeko20471120[at]gmail.com</h5>
+          <p class="warning">送信時には[at]を＠に変換してください。</p>
+          <p>また、細かな情報は研究会のFacebookページに掲載しております。ご参照のうえ、コメントを投稿いただくことで問い合わせをすることもできます。</p>
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-success" onclick="window.open('https://www.facebook.com/events/323323891417936/')">研究会Facebookページ</button>
           </div>
         </section>
 
