--- a/schedule.html
+++ b/schedule.html
@@ -7,6 +7,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>参加申し込み</title>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-99049176-1', 'auto');
+ga('send', 'pageview');
+</script>
 </head>
 <body>
 
@@ -129,7 +138,7 @@
             <button type="button" class="btn btn-success" onclick="window.open('https://www.facebook.com/events/323323891417936/')">研究会Facebookページ</button>
           </div>
         </section>
-        
+
       </article>
     </div>
     <!-- 主文終了 -->
