宿泊ページを作った。 画像・文章・ファイルを変更した。

--- a/about.html
+++ b/about.html
@@ -41,6 +41,7 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
+            <li><a href="lodge.html">宿泊案内</a></li>
             <li><a href="sponsor.html">スポンサー</a></li>
             <li><a href="registration.html">参加申し込み</a></li>
             <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
@@ -144,7 +145,7 @@
                     <img src="Pictures/Person/satou.jpg" alt="写真">
                 </div>
                 <div class="col-md-6 col-sm-6">
-                  <p>朝日新聞長崎総局　対馬通信員（エリアリポーター）</p>
+                  <p>対馬市島おこし協働隊OB</p>
                   <h5 class="Emphasis3"><span>佐藤 雄二</span></h5><br>
                 </div>
               </div>
