--- a/fieldWork.html
+++ b/fieldWork.html
@@ -43,6 +43,7 @@
               <li><a href="prepare.html">対馬についての予習</a></li>
               <li><a href="fieldWork.html">フィールドワーク</a></li>
               <li><a href="traffic.html">交通案内</a></li>
+              <li><a href="lodge.html">宿泊案内</a></li>
               <li><a href="sponsor.html">スポンサー</a></li>
               <li><a href="registration.html">参加申し込み</a></li>
                 <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
@@ -107,7 +108,7 @@
               </p>
 
               <h4 class="fw-title-sm" style="text-decoration: underline;">全日コース</h4>
-              <img class="img-responsive" src="Pictures/FieldWork/FieldWork11.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork1.png" alt="写真">
             </div>
 
             <hr class="hr-sm">
@@ -122,7 +123,7 @@
               </p>
 
               <h4 class="fw-title-sm" style="text-decoration: underline;">半日コース</h4>
-              <img class="img-responsive" src="Pictures/FieldWork/FieldWork12.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork2.png" alt="写真">
             </div>
           </div><!-- div class="row" id="article1"> -->
           <!-- フィールドワーク01,02終了 -->
@@ -142,16 +143,17 @@
               </p>
 
               <h4 class="fw-title-sm" style="text-decoration: underline;">晴天時</h4>
-              <img class="img-responsive" src="Pictures/FieldWork/FieldWork09.png" alt="写真">
+                <img class="img-responsive" src="Pictures/FieldWork/Fieldwork3-1.jpg" alt="写真">
             </div>
 
             <div class="col-md-6 col-lg-6">
               <p class="item_txt">
-                ＜雨天時＞対馬の神話、伝説の地をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海運の要所であった西の漕手、住吉神社を見学し、竜宮伝説が残る和多津美神社を訪れます。天気が良くなれば烏帽子岳展望台から浅茅湾のリアス地形をご確認いただけます。その後、厳原中心部で解散となります。
+                ＜雨天時＞対馬の神話、伝説の地をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。
+                対馬の魚介を味わった後、海運の要所であった西の漕手、住吉神社を見学し、竜宮伝説が残る和多都美神社を訪れます。天気が良くなれば烏帽子岳展望台から浅茅湾のリアス地形をご確認いただけます。その後、厳原中心部で解散となります。
               </p>
 
               <h4 class="fw-title-sm" style="text-decoration: underline;">雨天時</h4>
-              <img class="img-responsive" src="Pictures/FieldWork/FieldWork10.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork3-2.jpg" alt="写真">
             </div>
           </div>
 
@@ -166,7 +168,7 @@
               <p class="item_txt_lg">
                 地場産業の活性化に取り組む方を訪ねるツアーです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海産物の6次産業化、地域力発信に力を入れている真心水産を訪れます。比田勝港に近い日昇漁業ではIターンから漁業就業、企業に至った経緯などを伺います。その後、厳原中心部で解散となります。
               </p>
-              <img class="img-responsive" src="Pictures/FieldWork/FieldWork14.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWork4.png" alt="写真">
             </div>
 
             <hr class="hr-sm">
@@ -176,10 +178,13 @@
               <h4 class="fw-title">対馬の文化財保護コース</h4>
               <p class="item_txt_lg">
                 対馬の文化財と建設中の博物館についてのレクチャと実地検分を兼ねたコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。
-                ジェットフォイルで来島の方はふれあい処まで徒歩でお願いします。ふれあい処で対馬の郷土料理を味わった後、博物館準備室の方から建設中の博物館に関するレクチャをいただきます。
+                ジェットフォイルで来島の方はふれあい処まで徒歩でお願いします。ふれあい処で対馬の郷土料理を味わった後、博物館建設推進室の方から建設中の博物館に関するレクチャをいただきます。
                 その後、宗家の菩提寺である万松院、江戸時代のドックであるお船江をめぐります。最後は厳原中心部で解散となります。
               </p>
+              <!--
               <img class="img-responsive" src="Pictures/FieldWork/FieldWork15.png" alt="写真">
+            -->
+              <img class="img-responsive" src="Pictures/FieldWork/Fieldwork5.jpg" alt="写真">
             </div>
           </div>
           <!-- フィールドワーク0405終了 -->
@@ -194,7 +199,7 @@
               <p class="item_txt">
                 フィールドワーク3~5を希望される方で、福岡、長崎1便およびフェリーでの来島をされる方にはオプションコースをご用意しています。元寇襲来の地など史跡を巡るコースになっています。別途料金は発生しません。
               </p>
-              <img class="img-responsive" src="Pictures/FieldWork/FieldWork13.png" alt="写真">
+              <img class="img-responsive" src="Pictures/FieldWork/FieldWorkOption.png" alt="写真">
             </div>
           </div>
           <!-- フィールドワーク06終了 -->
@@ -223,14 +228,14 @@
               </p>
               <!-- 論文募集要項 -->
               <div class="btn-group">
-                <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170415_SICCCI02_CFP.pdf')">論文募集要項　</button>
+                <button type="button" class="btn btn-info" onclick="window.open('Files/Common/20170415_SICCCI02_CFP.pdf')">論文募集要項　</button>
                 <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                   <span class="caret"></span>
                   <span class="sr-only">Toggle Dropdown</span>
                 </button>
                 <ul class="dropdown-menu">
-                  <li><a href="Files/Index/20170415_SICCCI02_CFP.pdf" target="_blank">オープン</a></li>
-                  <li><a href="Files/Index/20170415_SICCCI02_CFP.pdf" download="20170415_SICCCI02_CFP.pdf">ダウンロード</a></li>
+                  <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">オープン</a></li>
+                  <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" download="20170415_SICCCI02_CFP.pdf">ダウンロード</a></li>
                 </ul>
               </div>
 
