--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
+            <li><a href="lodge.html">宿泊案内</a></li>
             <li><a href="sponsor.html">スポンサー</a></li>
             <li><a href="registration.html">参加申し込み</a></li>
-              <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
+            <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
           </ul>
           <!--
           <ul class="nav navbar-nav navbar-right ExLink">
@@ -144,10 +145,14 @@
         <h3>目次</h3>
         <ul>
           <li><a href="about.html">研究会について</a></li>
+          <li><a href="schedule.html">スケジュール</a></li>
           <li><a href="prepare.html">対馬についての予習</a></li>
           <li><a href="fieldWork.html">フィールドワーク</a></li>
           <li><a href="traffic.html">交通案内</a></li>
+          <li><a href="lodge.html">宿泊案内</a></li>
+          <li><a href="sponsor.html">スポンサー</a></li>
           <li><a href="registration.html">参加申し込み</a></li>
+          <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
         </ul>
         <!--h3>過去の研究会</h3-->
         <h3>関連リンク</h3>
@@ -162,27 +167,27 @@
         <!-- Split button -->
         <!-- 研究会のしおり -->
         <div class="btn-group">
-          <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170415_SIGCCI02_Guide.pdf')">研究会のしおり</button>
+          <button type="button" class="btn btn-info" onclick="window.open('Files/Common/20170522_SIGCCI02_Guide.pdf')">研究会のしおり</button>
           <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
             <span class="caret"></span>
             <span class="sr-only">Toggle Dropdown</span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="Files/Index/20170415_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
-            <li><a href="Files/Index/20170415_SIGCCI02_Guide.pdf" download="20170415_SIGCCI02_Guide.pdf">ダウンロード</a></li>
+            <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
+            <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" download="20170522_SIGCCI02_Guide.pdf">ダウンロード</a></li>
           </ul>
         </div>
         <br><br>
         <!-- 論文募集要項 -->
         <div class="btn-group">
-          <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170415_SICCCI02_CFP.pdf')">論文募集要項　</button>
+          <button type="button" class="btn btn-info" onclick="window.open('Files/Common/20170415_SICCCI02_CFP.pdf')">論文募集要項　</button>
           <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
             <span class="caret"></span>
             <span class="sr-only">Toggle Dropdown</span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="Files/Index/20170415_SICCCI02_CFP.pdf" target="_blank">オープン</a></li>
-            <li><a href="Files/Index/20170415_SICCCI02_CFP.pdf" download="20170415_SICCCI02_CFP.pdf">ダウンロード</a></li>
+            <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" target="_blank">オープン</a></li>
+            <li><a href="Files/Common/20170415_SICCCI02_CFP.pdf" download="20170415_SICCCI02_CFP.pdf">ダウンロード</a></li>
           </ul>
         </div>
       </div>
