--- a/prepare.html
+++ b/prepare.html
@@ -43,6 +43,7 @@ ga('send', 'pageview');
               <li><a href="prepare.html">対馬についての予習</a></li>
               <li><a href="fieldWork.html">フィールドワーク</a></li>
               <li><a href="traffic.html">交通案内</a></li>
+              <li><a href="lodge.html">宿泊案内</a></li>
               <li><a href="sponsor.html">スポンサー</a></li>
               <li><a href="registration.html">参加申し込み</a></li>
                 <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
@@ -93,12 +94,13 @@ ga('send', 'pageview');
               <br><br><br>
               <p>
                 長崎県対馬市(2004年に6町合併で発足)</br>
-                人口：30,664人(2017年2月現在)</br>
+                人口：31,560人(2017年4月末現在)※住民基本台帳月報</br>
                 65歳以上の人口割合：29.5%(2010年)</br>
                 島の数：100以上</br>
                 総面積：約700キロ平米　日本で10番目に大きな島</br>
-                おもな産業：林業(対馬ひのき、干しシイタケ)、水産業(イカ、真珠やブリの養殖)、観光業</br>
-                観光客:国内34万人、韓国19万人(2013年)</br>
+                おもな産業：林業(対馬ひのき、乾しいたけ)、水産業(イカ、真珠やマグロの養殖)、観光業</br>
+                観光客:国内観光・ビジネス　16.2万人（2014年）　※対馬市地域交通網形成計画</br>
+                &emsp;&emsp;&emsp;&emsp;外国人　21.5万人(2015年)　※法務省出入国管理統計<br>
                 九州までの距離：132キロ</br>
                 韓国までの距離：49.5キロ
               </p>
@@ -125,7 +127,7 @@ ga('send', 'pageview');
                 <div class="ac-cont diary">
                   <p class="diary_txt">
                   今回は東京、名古屋から福岡経由の空路、博多港から海路という二つの方法で島に向かいました。長崎から空路という手段もありますが、飛行機が40名の乗りと一回り小さくなります。
-                  また、博多港を午前0時過ぎに出稿するフェリーでゆったり来るという方法もあります。
+                  また、博多港を午前0時過ぎに出航するフェリーでゆったり来るという方法もあります。
                   福岡からの飛行機は便によって定員70名ほどのプロペラ機になることがあります。
                   低空の雲の間を抜け、海を見下ろしながらの飛行は旅の気分を盛り上げます。
                   </p>
@@ -139,7 +141,7 @@ ga('send', 'pageview');
                     <img src="Pictures/Prepare/DiaryMini/Jetfoil01.JPG" alt="堀田さんの看板写真">
                   </figure>
                   <p class="diary_txt">
-                    ジェットフォイルは壱岐経由で対馬に向かいます。フェリーに比べて揺れないとはいうものの万が一に備えてシートベルトは欠かせません。
+                    ジェットフォイルは壱岐経由で対馬に向かいます。万が一に備えてシートベルトは欠かせません。
                   </p>
                   <figure>
                     <img src="Pictures/Prepare/DiaryMini/Jetfoil02.JPG" alt="堀田さんのジェットフォイル写真">
@@ -164,7 +166,7 @@ ga('send', 'pageview');
                       <img src="Pictures/Prepare/DiaryMini/12-312.jpg" alt="12-312.jpg">
                   </figure>
                   <p class="diary_txt">
-                    こちらはB-1グランプリでもゆうめいな「対馬とんちゃん」。ニンニクなどがよく効いたタレに付け込んだ豚肉を焼いたものです。
+                    こちらは国境の島ならではのご当地料理「対馬とんちゃん」。ニンニクなどがよく効いたタレに付け込んだ豚肉を焼いたものです。
                   </p>
                   <figure>
                       <img src="Pictures/Prepare/DiaryMini/5-312.jpg" alt="5-312.jpg">
@@ -188,7 +190,7 @@ ga('send', 'pageview');
                       <img src="Pictures/Prepare/DiaryMini/44-312.jpg" alt="44-312.jpg">
                   </figure>
                   <p class="diary_txt">
-                    お船江から南下、フィールドワーク先の「ツシマヤマネコ野生順化ステーション」へ。高い作で囲われたエリアが広がります。
+                    お船江から南下、フィールドワーク先の「ツシマヤマネコ野生順化ステーション」へ。高い柵で囲われたエリアが広がります。
                   </p>
                   <figure>
                       <img src="Pictures/Prepare/DiaryMini/20-312.jpg" alt="20-312.jpg">
@@ -214,24 +216,25 @@ ga('send', 'pageview');
                   <p class="diary_txt">
                     セッション会場候補の下見を経て、ホテルにチェックイン。夕食に向かいます。
                   </p>
-                  <figure>
-                      <img src="Pictures/Prepare/DiaryMini/56-312.jpg" alt="56-312.jpg">
-                  </figure>
                   <p class="diary_txt">
                     対馬に来たらぜひ味わってほしいのが海鮮。これは新鮮な鯖の刺身。
                   </p>
                   <figure>
-                      <img src="Pictures/Prepare/DiaryMini/57-312.jpg" alt="57-312.jpg">
+                      <img src="Pictures/Prepare/DiaryMini/56-312.jpg" alt="56-312.jpg">
                   </figure>
                   <p class="diary_txt">
                     サザエのお造りも都会では考えられない値段で提供されています。
                   </p>
                   <figure>
-                      <img src="Pictures/Prepare/DiaryMini/62-312.jpg" alt="62-312.jpg">
+                      <img src="Pictures/Prepare/DiaryMini/57-312.jpg" alt="57-312.jpg">
                   </figure>
                   <p class="diary_txt">
-                    あわせるのは島唯一の蔵、河内酒造で醸された米焼酎「やまねこ」。水のように飲みやすく、海鮮によくあいます。
+                    あわせるのは島唯一の蔵、河内酒造で醸された麦米焼酎「やまねこ」。水のように飲みやすく、海鮮によくあいます。
                   </p>
+                  <figure>
+                      <img src="Pictures/Prepare/DiaryMini/62-312.jpg" alt="62-312.jpg">
+                  </figure>
+
                 </div><!-- <div class="ac-cont diary"> -->
               <!---->
               </div>
@@ -245,7 +248,7 @@ ga('send', 'pageview');
                 </label>
                 <div class="ac-cont diary">
             <p class="diary_txt">
-              二日目のスタートは昨日味わった郷土料理「ろくべえ」を通して島の歴史や地域について考える総合学習を行っている小網小学校へ。途中万関という明治時代に開削した運河をわたり、そのわきの高台にある万関展望台に立ち寄ります。<br>
+              二日目のスタートは昨日味わった郷土料理「ろくべえ」を通して島の歴史や地域について考える総合学習を行っている小綱小学校（※こづな小学校）へ。途中万関という明治時代に開削した運河をわたり、そのわきの高台にある万関展望台に立ち寄ります。<br>
               対馬はもともと一つの島でしたが、東西を船で行き来するために海軍によって運河が作られました。ここからの眺めは絶景です。
             </p>
             <figure>
@@ -333,7 +336,7 @@ ga('send', 'pageview');
               <img src="Pictures/Prepare/DiaryMini/144-312.jpg" alt="144-312.jpg">
             </figure>
             <p class="diary_txt">
-              すこし汗をかいて、頂上まで登ると厳原高校や対馬空港のほうまで眺められる絶景が。
+              すこし汗をかいて、頂上まで登ると対馬高校や対馬空港のほうまで眺められる絶景が。
             </p>
             <figure>
               <img src="Pictures/Prepare/DiaryMini/131-312.jpg" alt="131-312.jpg">
@@ -346,7 +349,7 @@ ga('send', 'pageview');
               <img src="Pictures/Prepare/DiaryMini/151-312.jpg" alt="151-312.jpg">
             </figure>
             <p class="diary_txt">
-              二日目最後の視察は、セッション会場として検討している宿坊西山寺です。西山寺は江戸時代に朝鮮との外交機関「以酊庵」が置かれていた由緒ある臨済宗の寺。
+              二日目最後の視察は、セッション会場として検討している宿坊西山寺です。西山寺は江戸時代に朝鮮との外交機関「以酊庵」（いていあん）が置かれていた由緒ある臨済宗の寺。
               こちらの本堂と座禅堂をお借りしてセッションを構成できないかと考えています。
             </p>
             <figure>
@@ -446,7 +449,7 @@ ga('send', 'pageview');
                     <img src="Pictures/Prepare/DiaryMini/233-312.jpg" alt="233-312.jpg">
                   </figure>
                   <p class="diary_txt">
-                    行きとは違った道で降りていくと視界が一気に開けます。これが二の城戸と呼ばれる海から物資を運びこむための門の後です。頑丈に石が積み上げられています。
+                    行きとは違った道で降りていくと視界が一気に開けます。これが二の城戸と呼ばれる海から物資を運びこむための門の跡です。頑丈に石が積み上げられています。
                   </p>
                   <figure>
                     <img src="Pictures/Prepare/DiaryMini/236-312.jpg" alt="236-312.jpg">
@@ -509,10 +512,10 @@ ga('send', 'pageview');
                   <p class="diary_txt">
                     といったところで飛行機の時間が迫ってきました。<br>
                     いったん厳原に戻ってお土産を買います。<br>
-                    干物にはちみつ、藻塩など自然の恵みを活かした特産品が並ぶ中、なんといっても忘れてはいけないのが「かすまき」です。カステラであんこを巻くという甘いモノ重ねは佐藤が貴重だった時代の名残だそうです。
+                    干物にはちみつ、藻塩など自然の恵みを活かした特産品が並ぶ中、なんといっても忘れてはいけないのが「かすまき」です。カステラであんこを巻くという甘いモノ重ねは砂糖が貴重だった時代の名残だそうです。
                   </p>
                   <figure>
-                    <img src="Pictures/noimage2.jpg" alt="かすまきの写真">
+                    <img src="Pictures/Prepare/DiaryMini/kasumaki.jpg" alt="かすまきの写真">
                   </figure>
                   <p class="diary_txt">
                     まだまだ島の北部には行けていませんし(ヤマネコセンターは北部にあります)、歴史を知るためのポイントもいくつか残っています。フィールドワークの設計に向けて、いろいろな方と打ち合わせをさせていただき、その都度対馬の魅力と、抱えている問題について教えていただきました。ものすごく濃い3日間を終えて感じたのは、
