--- a/registration.html
+++ b/registration.html
@@ -43,6 +43,7 @@ ga('send', 'pageview');
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
+            <li><a href="lodge.html">宿泊案内</a></li>
             <li><a href="sponsor.html">スポンサー</a></li>
             <li><a href="registration.html">参加申し込み</a></li>
               <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
