--- a/sponsor.html
+++ b/sponsor.html
@@ -43,19 +43,13 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
+            <li><a href="lodge.html">宿泊案内</a></li>
             <li><a href="sponsor.html">スポンサー</a></li>
             <li><a href="registration.html">参加申し込み</a></li>
             <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
           </ul>
 
         </div>
-        <!---
-        <button type="button" class="btn btn-default navbar-btn navbar-right">
-          <a href="https://form.jotform.me/70938432366462">
-            原稿投稿
-          </a>
-        </button>
-      <!---->
         <!-- サイドメニュー開始 -->
         <input type="checkbox" id="navTgl" class="navbar-toggle">
         <label for="navTgl" class="open side">≡</label>
