--- a/schedule.html
+++ b/schedule.html
@@ -43,6 +43,7 @@ ga('send', 'pageview');
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
+            <li><a href="lodge.html">宿泊案内</a></li>
             <li><a href="sponsor.html">スポンサー</a></li>
             <li><a href="registration.html">参加申し込み</a></li>
               <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
@@ -91,7 +92,7 @@ ga('send', 'pageview');
           <!-- 6月30日 -->
           <h4 id="article2">6月30日(金)</h4>
           <div class="row" align="center">
-            <div class="col-lg-12 col-md-12"><img src="Pictures/About/Timetable0630.jpg" alt="写真"></div>
+            <div class="col-lg-12 col-md-12"><img src="Pictures/Schedule/Timetable0630.jpg" alt="写真"></div>
           </div>
           <p>
             <br>
@@ -104,12 +105,12 @@ ga('send', 'pageview');
           <!-- ７月１日(土) -->
           <h4 id="article3">7月1日(土)</h4>
           <div class="row" align="center">
-            <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/About/Timetable0701.jpg" alt="写真"></div>
+            <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/Schedule/Timetable0701.jpg" alt="写真"></div>
           </div>
           <!-- ７月2日(日) -->
           <h4 id="article4">7月2日(日)</h4>
           <div class="row" align="center">
-            <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/About/Timetable0702.jpg" alt="写真"></div>
+            <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/Schedule/Timetable0702.jpg" alt="写真"></div>
           </div>
           <!--
           <a href="./Files/About/20170322_Timetable.pdf" class="Link1">タイムテーブルのpdf</a>
