--- a/traffic.html
+++ b/traffic.html
@@ -43,6 +43,7 @@ ga('send', 'pageview');
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
+            <li><a href="lodge.html">宿泊案内</a></li>
             <li><a href="sponsor.html">スポンサー</a></li>
             <li><a href="registration.html">参加申し込み</a></li>
               <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
@@ -123,14 +124,14 @@ ga('send', 'pageview');
                 <a href="" class="Link1"></a>
                 <!-- 研究会のしおり -->
                 <div class="btn-group">
-                  <button type="button" class="btn btn-info" onclick="window.open('Files/Traffic/20170322_FW理想のルート.pdf')">フィールドワーク理想のルートpdf</button>
+                  <button type="button" class="btn btn-info" onclick="window.open('Files/Traffic/0630BestRoute.pdf')">フィールドワーク理想のルートpdf</button>
                   <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                     <span class="caret"></span>
                     <span class="sr-only">Toggle Dropdown</span>
                   </button>
                   <ul class="dropdown-menu">
-                    <li><a href="Files/Traffic/20170322_FW理想のルート.pdf" target="_blank">オープン</a></li>
-                    <li><a href="Files/Traffic/20170322_FW理想のルート.pdf" download="Files/Traffic/20170322_FW理想のルート.pdf">ダウンロード</a></li>
+                    <li><a href="Files/Traffic/0630BestRoute.pdf" target="_blank">オープン</a></li>
+                    <li><a href="Files/Traffic/0630BestRoute.pdf" download="Files/Traffic/0630BestRoute.pdf">ダウンロード</a></li>
                   </ul>
                 </div>
             </div>
@@ -161,7 +162,8 @@ ga('send', 'pageview');
           <br><br><br>
           <figure>
             <img src="Pictures/Traffic/釜山.jpg">
-            <p>エアプサン就航都市(東京成田、中部、大阪、札幌)からは釜山経由でアクセス可能です。釜山からは高速船(海路)となります。高速船の到着地を厳原にしてください。比田勝港域のものもありますので、ご注意ください。</p>
+            <p>エアプサン就航都市(東京成田、中部、大阪、札幌)からは釜山経由でアクセス可能です。釜山からは高速船(海路)となります。高速船の到着地を厳原にしてください。
+              比田勝港行のものもありますので、ご注意ください。</p>
           </figure>
         </section>
 
@@ -171,14 +173,14 @@ ga('send', 'pageview');
           <p>対馬での過ごし方については「研究会のしおり」をお読みください</p>
           <!-- 研究会のしおり -->
           <div class="btn-group">
-            <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170415_SIGCCI02_Guide.pdf')">研究会のしおり</button>
+            <button type="button" class="btn btn-info" onclick="window.open('Files/Common/20170522_SIGCCI02_Guide.pdf')">研究会のしおり</button>
             <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
               <span class="caret"></span>
               <span class="sr-only">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu">
-              <li><a href="Files/About/20170415_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
-              <li><a href="Files/About/20170415_SIGCCI02_Guide.pdf" download="20170415_SIGCCI02_Guide.pdf">ダウンロード</a></li>
+              <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" target="_blank">オープン</a></li>
+              <li><a href="Files/Common/20170522_SIGCCI02_Guide.pdf" download="20170415_SIGCCI02_Guide.pdf">ダウンロード</a></li>
             </ul>
           </div>
         </section>
