--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
       <div class="row">
       <!-- 右メニュー開始 -->
       <div class="col-xs-12 col-md-4 col-md-push-8">
+        <h3>第2回研究会スポンサー</h3>
+        <a href="http://www.okamura.co.jp/" target="_blank">
+          <img src="Pictures/Logo/okamura.jpg" alt="..."  class="img-responsive center-block logo">
+        </a>
+        <a href="http://www.fujixerox.co.jp/" target="_blank">
+          <img src="Pictures/Logo/fx_3ln_rgb.jpg" alt="..."  class="img-responsive center-block logo">
+        </a>
+
         <h3>目次</h3>
         <ul>
           <li><a href="about.html">研究会について</a></li>
