原稿執筆案内へのリンクを追加した。

--- a/sponsor.html
+++ b/sponsor.html
@@ -46,6 +46,7 @@
             <li><a href="lodge.html">宿泊案内</a></li>
             <li><a href="sponsor.html">スポンサー</a></li>
             <li><a href="registration.html">参加申し込み</a></li>
+            <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/submission.html">原稿執筆案内</a></li>
             <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
           </ul>
 
