--- a/schedule.html
+++ b/schedule.html
@@ -64,7 +64,8 @@ ga('send', 'pageview');
             <li><a href="#article2" class="scroll" data-offset="50">6月30日(金)</a></li>
             <li><a href="#article3" class="scroll" data-offset="50">7月1日(土)</a></li>
             <li><a href="#article4" class="scroll" data-offset="50">7月2日(日)</a></li>
-            <li><a href="#article5" class="scroll" data-offset="50">問い合わせ</a></li>
+            <li><a href="#article5" class="scroll" data-offset="50">対話セッション　タイムテーブル</a></li>
+            <li><a href="#article6" class="scroll" data-offset="50">問い合わせ</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -131,6 +132,16 @@ ga('send', 'pageview');
         </section>
 
         <section id="article5">
+          <h3>対話セッション　タイムテーブル</h3>
+          <div class="row" align="center">
+            <div class="col-lg-12 col-md-12"><img max-width="150%" src="Pictures/Schedule/Session.jpg" alt="写真"></div>
+          </div>
+          <p>
+            タイムテーブルは投稿論文の内容によって変更される場合があります
+          </p>
+        </section>
+
+        <section id="article6">
           <h3>問い合わせ</h3>
           <p>研究会の内容やスケジュール、参加に際して気になる点がありましたら、下記アドレスまでお問い合わせください。</p>
           <h5 class="Emphasis">ikeko20471120[at]gmail.com</h5>
