バナーの追加と編集，セッションスケジュールの追加

--- a/index.html
+++ b/index.html
@@ -145,11 +145,41 @@
       <div class="col-xs-12 col-md-4 col-md-push-8">
         <h3>第2回研究会スポンサー</h3>
         <a href="http://www.okamura.co.jp/" target="_blank">
-          <img src="Pictures/Logo/okamura.jpg" alt="..."  class="img-responsive center-block logo">
+          <img src="Pictures/Logo/okamura2.png" alt="..."  class="img-responsive center-block logo">
         </a>
+        <div class="text-center" style="color: #777;">株式会社岡村製作所</div>
+        <br>
         <a href="http://www.fujixerox.co.jp/" target="_blank">
           <img src="Pictures/Logo/fx_3ln_rgb.jpg" alt="..."  class="img-responsive center-block logo">
         </a>
+        <div class="text-center" style="color: #777;">富士ゼロックス株式会社</div>
+
+        <h3>後援</h3>
+        <a href="http://www.okamura.co.jp/" target="_blank">
+          <img src="Pictures/Logo/kanbutsu_banner.gif" alt="..."  class="img-responsive center-block logo">
+        </a>
+<!--         <br>
+        <div class="text-center" style="color: #777;">対馬観光物産協会</div> -->
+
+        <br>
+
+        <div class="text-center">
+          <div class="log-wrap">
+              <a href="http://www.city.tsushima.nagasaki.jp/" target="_blank">対馬市</a>
+          </div>
+        </div>
+<!--         <br>
+        <div class="text-center" style="color: #777;">対馬市</div> -->
+
+        <br>
+
+        <div class="text-center">
+          <div class="log-wrap" style="font-size: 16px;">
+              <a href="https://www.jcrd.jp/" target="_blank" style="padding-top: 5px;">(財)地域活性化センター</a>
+          </div>
+        </div>
+<!--         <br>
+        <div class="text-center" style="color: #777;">(財)地域活性化センター</div> -->
 
         <h3>目次</h3>
         <ul>
