--- a/schedule.html
+++ b/schedule.html
@@ -134,7 +134,9 @@ ga('send', 'pageview');
         <section id="article5">
           <h3>対話セッション　タイムテーブル</h3>
           <div class="row" align="center">
-            <div class="col-lg-12 col-md-12"><img max-width="150%" src="Pictures/Schedule/Session.jpg" alt="写真"></div>
+            <div class="col-lg-12 col-md-12">
+              <a href="Pictures/Schedule/Session.jpg" data-lightbox="session" data-title="対話セッション　タイムテーブル"><img src="Pictures/Schedule/Session.jpg" /></a>
+            </div>
           </div>
           <p>
             タイムテーブルは投稿論文の内容によって変更される場合があります
@@ -181,6 +183,8 @@ ga('send', 'pageview');
     <!-- BootstrapのJS読み込み -->
     <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
     <script src="Scroll.js"></script>
+    <script src="js/lightbox.js"></script>
+
     <link rel="stylesheet" href="BS_OverWrite.css">
     <link rel="stylesheet" href="FlexBoxStyle.css">
     <link rel="stylesheet" href="base1.css">
