パンくず修正

--- a/fieldWork.html
+++ b/fieldWork.html
@@ -21,7 +21,7 @@
 
     <div id="wrap" class="">
       <!-- ヘッダー(ナビバー )開始 -->
-      <nav class="navbar navbar-default navbar-fixed-top">
+      <nav class="navbar navbar-default navbar-top">
         <div class="container">
           <div class="navbar-header">
             <!--タイトル-->
@@ -77,16 +77,15 @@
       </nav>
       <!-- ヘッダー終了 -->
 
-    <div class="contents">
+    <div class="content">
 
       <div class="ribbon-wrap">
         <div class="content-wrap">
           <ol class="ribbon-breadcrumb-list">
-            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知 研究会 Web</a></li>
-            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">第２回 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知研究会</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">ホーム</a></li>
             <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">フィールドワーク</span></li>
           </ol>
-          <h1 class="ribbon-banner"><span class="ribbon-banner-text">フィールドワーク</span></h1>
         </div>
       </div><!-- class="ribbon-wrap" -->
 
