--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
   <div id="wrap" class="">
     <!-- ヘッダー(ナビバー )開始 -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-top">
       <div class="container">
         <div class="navbar-header">
           <!--タイトル-->
@@ -83,15 +83,14 @@
         <!- パンくずリスト終了 -->
 
     <!-- 主文開始 -->
-    <div class="contents">
+    <div class="content">
       <div class="ribbon-wrap">
         <div class="content-wrap">
           <ol class="ribbon-breadcrumb-list">
-            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知 研究会 Web</a></li>
-            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">第２回 研究会 Web</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知研究会HP</a></li>
+            <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">ホーム</a></li>
             <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">研究会について</span></li>
           </ol>
-          <h1 class="ribbon-banner"><span class="ribbon-banner-text">研究会について</span></h1>
         </div>
       </div>
       <div class="row fw-box" style="max-width:100%">
