ページトップ編集

--- a/about.html
+++ b/about.html
@@ -93,12 +93,16 @@
           </ol>
         </div>
       </div>
+
+      <h1 class="top-title">研究会について</h1>
+
       <div class="row fw-box" style="max-width:100%">
         <div class="col-md-8 col-md-offset-2">
           <img class="img-responsive" src="Pictures/About/Theme.jpg" alt="写真">
         </div><!--   <div class="col-md-8 col-md-offset-2"> -->
       </div>
         <article>
+
           <section id="article1">
             <h3>研究会主査より</h3>
             <section class="comment_item">
