--- a/lodge.html
+++ b/lodge.html
@@ -84,6 +84,9 @@ ga('send', 'pageview');
         </div>
       </div>
       <article>
+
+        <h1 class="top-title">宿泊案内</h1>
+        
         <p>研究会期間中の宿泊先は参加者各自手配となります。対馬には厳原を中心にビジネスホテルから民泊まで幅広い選択肢の宿があります。
           ただ、ビジネスホテル以外はベット数が少ないこともあり、早めの予約が必要です。</p>
         <section id="article1">
