--- a/prepare.html
+++ b/prepare.html
@@ -86,6 +86,7 @@ ga('send', 'pageview');
       </div>
         <article>
           <section id="article1">
+            <h1 class="top-title">対馬についての予習</h1>
             <h3>対馬の概要</h3>
 
             <figure>
