--- a/schedule.html
+++ b/schedule.html
@@ -84,8 +84,10 @@ ga('send', 'pageview');
           </ol>
         </div>
       </div>
+
       <article>
         <section id="article1">
+          <h1 class="top-title">スケジュール</h1>
           <h3>研究会スケジュール</h3>
           <p>
             第２回研究会は６月３０日、７月１日、７月２日の３日間にわたり開催されます。
