--- a/sponsor.html
+++ b/sponsor.html
@@ -84,6 +84,8 @@
         </div>
       </div>
         <article>
+          <h1 class="top-title">スポンサー企業・団体募集のご案内</h1>
+          
           <p>市民共創知研究会は、2016年に発足した人工知能学会の新しい研究会でわたしたち市民が抱えている問題に対してみんなで対話し、解決策を見つけ出し、実践的に解いていくことを目的としています。</p>
           <p>つきましては、第2回研究会の開催趣旨にご賛同いただけるスポンサー企業・団体様を募集させていただきます。企業として地域の課題に取り組んでいくための手法を探っておられる団体様がいらっしゃいましたら、是非とも本大会の開催趣旨にご賛同のうえ、ご協力を賜りますよう、よろしくお願い申し上げます。</p>
           <section id="article1">
