--- a/traffic.html
+++ b/traffic.html
@@ -86,6 +86,8 @@ ga('send', 'pageview');
       </div>
       <article>
         <section id="article1">
+          <h1 class="top-title">交通案内</h1>
+
           <h3>各都市からアクセス</h3>
           <br><br>
           <figure>
