ヘッダーの修正

--- a/fieldWork.html
+++ b/fieldWork.html
@@ -22,10 +22,10 @@
     <div id="wrap" class="">
       <!-- ヘッダー(ナビバー )開始 -->
       <nav class="navbar navbar-default navbar-top">
-        <div class="container">
+        <div class="container" style="margin-left: 30px;">
           <div class="navbar-header">
             <!--タイトル-->
-            <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/"><p>市民共創知研究会</p></a>
+            <a class="navbar-brand navbar-title" href="index.html">第2回市民共創知研究会</a>
             <!--トグルボタンの設置-->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
               <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
