--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
   <div id="wrap">
     <!-- ヘッダー(ナビバー )開始 -->
     <div class="nav-ber">
-      <nav class="navbar navbar-default navbar-fixed-top" style="position: inherit;">
-        <div class="container">
+      <nav class="navbar navbar-default navbar-top">
+
+        <div class="container" style="margin-left: 30px;">
+
           <div class="navbar-header">
             <!--タイトル-->
-            <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/"><p>市民共創知研究会</p></a>
+            <a class="navbar-brand navbar-title" href="index.html">第2回市民共創知研究会</a>
             <!--トグルボタンの設置-->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
               <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
@@ -91,8 +93,7 @@
       <div class="content-wrap">
         <ol class="ribbon-breadcrumb-list">
           <li class="ribbon-breadcrumb-item"><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="ribbon-breadcrumb">市民共創知研究会HP</a></li>
-          <li class="ribbon-breadcrumb-item"><a href="index.html" class="ribbon-breadcrumb">ホーム</a></li>
-          <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">研究会について</span></li>
+          <li class="ribbon-breadcrumb-item Last"><span class="ribbon-breadcrumb">ホーム</span></li>
         </ol>
       </div>
     </div>
@@ -200,6 +201,7 @@
         <!--h3>過去の研究会</h3-->
         <h3>関連リンク</h3>
         <ul>
+          <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" target="_blank">市民共創知研究会</a></li>
           <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html" target="_blank">第1回市民共創知研究会@岩手県遠野市 遠野ふるさと村</a></li>
           <li><a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
           <li><a href="https://tsushimap.herokuapp.com/" target="_blank" >TsushiMAP(つしまっぷ)</a></li>
