--- a/lodge.html
+++ b/lodge.html
@@ -22,10 +22,10 @@ ga('send', 'pageview');
   <div id="wrap" class="">
     <!-- ヘッダー(ナビバー )開始 -->
     <nav class="navbar navbar-default navbar-top">
-      <div class="container">
+      <div class="container" style="margin-left: 30px;">
         <div class="navbar-header">
           <!--タイトル-->
-          <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/"><p>市民共創知研究会</p></a>
+          <a class="navbar-brand navbar-title" href="index.html">第2回市民共創知研究会</a>
           <!--トグルボタンの設置-->
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
             <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
@@ -86,7 +86,7 @@ ga('send', 'pageview');
       <article>
 
         <h1 class="top-title">宿泊案内</h1>
-        
+
         <p>研究会期間中の宿泊先は参加者各自手配となります。対馬には厳原を中心にビジネスホテルから民泊まで幅広い選択肢の宿があります。
           ただ、ビジネスホテル以外はベット数が少ないこともあり、早めの予約が必要です。</p>
         <section id="article1">
